Fix alignment

--- a/css/style.css
+++ b/css/style.css
@@ -265,7 +265,6 @@ textarea {
 
 /* Grid */
 .row {
-	margin-left: -48px;
 }
 
 .one {
@@ -273,7 +272,6 @@ textarea {
 	-moz-box-sizing:	border-box;
 	box-sizing:			border-box;
 	float: left;
-	padding-left: 38px;
 }
 
 .one {
